--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,10 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/rems_db?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
-logging.level.root = info
 
-#Hibernate Properties
+#Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.ddl-auto=update
@@ -14,6 +13,9 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.format_sql=true
 
 #Spring Confiugratino
-server.port=8090
+server.port=9090
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+#Logging Configuration
+logging.level.root = info
