--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/rems_db?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 
 #Hibernate Configuration
