--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
-
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
