--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
-#DataSource Configuration
+#DataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/rems_db?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
-
-#Hibernate Configuration
+#Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-#Spring Confiugratino
+#Spring
 server.port=9090
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+server.error.whitelabel.enabled=false
 
-#Logging Configuration
-logging.level.root = info
+#Logging
+logging.level.root=info
