- seprated reciept views - jsp runtime compilation support added [application.properties]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Spring
 server.port=9090
+server.error.whitelabel.enabled=false
+server.jsp-servlet.init-parameters.development: true
+
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-server.error.whitelabel.enabled=false
+
 
 #Logging
 logging.level.root=info
