--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#DataSource
+# DataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/rems_db?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
-#Hibernate
+# Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.ddl-auto=update
@@ -12,7 +12,13 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-#Spring
+# Keep the connection alive if idle for a long time (needed in production)
+# Keep the connection alive if idle for a long time (needed in production)
+#spring.datasource.dbcp2.test-while-idle = true
+#spring.datasource.dbcp2.validation-query = SELECT 1
+#spring.datasource.dbcp2.max-wait-millis = 3600000
+
+# Spring
 server.port=9090
 server.error.whitelabel.enabled=false
 server.jsp-servlet.init-parameters.development: true
@@ -21,5 +27,5 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 
-#Logging
+# Logging
 logging.level.root=info
