--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,9 @@ server.jsp-servlet.init-parameters.development: true
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-
 # Logging
 logging.level.root=info
+
+# Security
+security.user.name=admin
+security.user.password=admin
